--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,10 @@
         "destination": "/download.html"
       },
       {
+        "source": "/banklogs",
+        "destination": "/banklogs.html"
+      },
+      {
         "source": "/deposit",
         "destination": "/deposit.html"
       },
@@ -107,6 +111,11 @@
       {
         "source": "/citi.html",
         "destination": "/citi",
+        "type": 301
+      },
+      {
+        "source": "/banklogs.html",
+        "destination": "/banklogs",
         "type": 301
       },
       {
