--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,7 @@
     "rewrites": [
       {
         "source": "/index",
-        "destination": "/index.html"
+        "destination": "/home.html"
       },
       {
         "source": "/download",
@@ -79,7 +79,7 @@
     "redirects": [
       {
           "source": "/index.html",
-          "destination": "/index",
+          "destination": "/home",
           "type": 301
       },
       {
