--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,7 @@
     "rewrites": [
       {
         "source": "/index",
-        "destination": "/home.html"
+        "destination": "/index.html"
       },
       {
         "source": "/download",
@@ -79,14 +79,9 @@
     "redirects": [
       {
           "source": "/index.html",
-          "destination": "/home",
+          "destination": "/index",
           "type": 301
       },
-      {
-        "source": "/",
-        "destination": "/home.html",
-        "type": 301
-    },
       {
         "source": "/download.html",
         "destination": "/download",
