--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,10 @@
         "destination": "/home.html"
       },
       {
+        "source": "/login",
+        "destination": "/login.html"
+      },
+      {
         "source": "/download",
         "destination": "/download.html"
       },
@@ -73,6 +77,11 @@
       {
         "source": "/home.html",
         "destination": "/home",
+        "type": 301
+      },
+      {
+        "source": "/login.html",
+        "destination": "/login",
         "type": 301
       },
       {
